# RetroGameGame

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  build_output2.txt  compile_errors.txt  crash_output.txt  dev.sh  inspect_glb.py  run_success_output.txt  test.rs  test_output.txt
.cargo/: config.toml
agents/: INDEX.md  PRINCIPLES.md  README.md  team_roster.md
agents/archive/: README.md
agents/backlog/: NB-A1-001.md  NB-A1-002.md  NB-A1-003.md  NB-A1-004.md  NB-A1-005.md  NB-A1-006.md  NB-A1-007.md  NB-A1-008.md  NB-A1-009.md  NB-A1-010.md  NB-A2-001.md  NB-A2-002.md  NB-A2-003.md  NB-A2-004.md  NB-A2-005.md  NB-A2-006.md  NB-A2-007.md  NB-A2-008.md  NB-A2-009.md  NB-A2-010.md  NB-A2-011.md  NB-A2-012.md  NB-A2-013.md  NB-A2-014.md  NB-A2-015.md  NB-A3-001.md  NB-A3-002.md  NB-A3-003.md  NB-A4-001.md  NB-A4-002.md  NB-A4-003.md  NB-A4-004.md  NB-A4-006.md  NB-A4-008.md  NB-A4-009.md  NB-A4-010.md  NB-A4-011.md  NB-A4-012.md  NB-A4-013.md  NB-A5-001.md  (+27 more)
agents/loops/: LOOP-2026-02-18-nebula-gameplay-assetization.md
agents/merge/: NB-CX-005_merge_manifest.md  NB-CX-006_merge_manifest.md  NB-CX-007_merge_manifest.md  NB-CX-008_merge_manifest.md  NB-CX-009_merge_manifest.md  NB-CX-010_merge_manifest.md  (+2 more)
assets/: asset_requests.json
docs/: ASSET_PIPELINE.md  BRANCHING_MANDATE.md  REMOTE_RUST_COMPILER.md  WSL_GAME_RUNBOOK.md
scripts/: gen_hex_outline.py  mcp_nebula_visual_round.sh  test_bevy_brp_mcp.sh
specs/: cosmic_captain.md  depths_of_doom.md  ice_blitz.md  nebula_bouncer.md  star_goose.md  tunnel_miner.md  worm_wars.md
src/: lib.rs  main.rs
(+383 files in other folders)
