[package]
name = "retro-game-game"
version = "0.1.0"
edition = "2024"
description = "A love letter to gaming history — journey through decades of classic games"

[dependencies]
avian2d = "0.5.0"
bevy = { version = "0.18", features = ["mp3"] }
rand = "0.10.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
